--- a/index.html
+++ b/index.html
@@ -1,52 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CandyBar</title>
+        <title>Ringer.js</title>
         <link rel="stylesheet" href="site.css">
-        <link rel="stylesheet" href="build/candybar.css">
-        <script src="build/candybar.js"></script>
-        <script>
-            var cb = new CandyBar();
-            
-            document.addEventListener('DOMContentLoaded', function () {
-              cb.render();
-            }, false);
-
-        </script>
+        <script src="build/ringer.js"></script>
     </head>
     <body>
         <div class="wrap">
-            <h1>Candybar</h1>
-            <p>CandyBar is a simple UI view for showing/managing call states in your app.</p>
-            <p>It is meant to be used with phone-enabled web applications. It does not contain the actual call logic, it's merely meant to a "view" to reflect current call status.</p>
-            <h4>Available states (click to see)</h4>
-            <button onclick="cb.setState('active'); return false;">cb.setState('active')</button>
-            <button onclick="cb.setState('calling'); return false;">cb.setState('calling')</button>
-            <button onclick="cb.setState('inactive'); return false;">cb.setState('inactive')</button>
-            <button onclick="cb.setState('incoming'); return false;">cb.setState('incoming')</button>
-            <button onclick="cb.endGently(); return false;">cb.endGently()</button>
+            <h1>Ringer.js</h1>
+            <p>ringer is a dead-simple way to add ringtones to your <a href="https://js.att.io">att.js</a> app.</p>
 
-            <h4>Set Caller ID</h4>
+            <h4>Simple Use</h4>
             <pre>
-cb.setUser({
-    name: 'Meow', 
-    number: '999-999-9999', 
-    picUrl: 'http://placekitten.com/100/100'
+// init your att object from att.js
+var att = $.att({apiKey: "YOUR OATH TOKEN"});
+
+// just pass it your att object
+new Ringer(att);
+            </pre>
+
+            <h4>Adding Custom Ringtones</h4>
+            <pre>
+new Ringer(att, {
+    ringtones: {
+       "5555559999": "batman.wav",
+       "7777777777": "superman.wav"
+    },
+    ringbackTones: {
+        "5555559999": "batsignal.wav"
+    }
 });
             </pre>
-            <button onclick="cb.setUser({name: 'Meow', number: '999-999-9999', picUrl: 'http://placekitten.com/100/100'}); return false;">set user</button>
-            <button onclick="cb.clearUser(); return false;">cb.clearUser()</button>
 
             <h4>Download</h4>
-            <a href="http://att-innovate.github.com/CandyBar/build/candybar.js"><button>candybar.js</button></a>
-            <a href="http://att-innovate.github.com/CandyBar/build/candybar.css"><button>candybar.css</button></a>
+            <a href="http://att-innovate.github.com/ringer.js/build/ringer.js"><button>ringer.js</button></a>
+            <a href="http://att-innovate.github.com/ringer.js/build/ringer.min.js"><button>ringer.min.js</button></a>
 
-            <h4>Authors</h4>
-            <p><a href="http://andyet.com/team/adam/">Adam Brault</a> &mdash; Design</p>
-            <p><a href="http://andyet.com/team/henrik/">Henrik Joreteg</a> &mdash; JS</p>
+            <h4>Author</h4>
+            <p><a href="http://andyet.com/team/henrik/">Henrik Joreteg</a> &mdash; <a href="http://andyet.com">&amp;yet</a></p>
         </div>
         <footer>
-        <p>Copyright &copy; AT&T Foundry. Demo app created by &yet.
+        <p>Copyright &copy; AT&T Foundry. Created by &yet.
             <a class="andyet" href="http://andyet.net">&yet</a>
             <a class="foundry" href="http://developer.att.com/developer/forward.jsp?passedItemId=5300164"> AT&T Foundry</a>
         </p>
